fix: alignment issue

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -149,15 +149,18 @@
   font-size: 13px;
   border-radius: 30px;
   background-color: #fff;
-  padding: 4px 6px 4px 10px;
+  padding: 4px 6px;
   text-decoration: none;
   position: fixed;
   top: 16px;
   right: 2px;
   color: #F48982;
   font-weight: 600;
+    span{
+      line-height: initial;
+    }
    img{
-    width: 18px;
-    height: 18px;
+    width: 20px;
+    height: 20px;
    }
 }
